# cdm-tree-browser

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  install.json  jest.config.js  junit.xml  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml  pr-prerelease.yml  release-wheel.yml
cdm_tree_browser/: __init__.py  cdm_methods.py  mock_data.py  mock_definitions.py
src/: ContextMenu.tsx  InfoPanel.tsx  TenantTabContent.tsx  TreeDataLoader.tsx  TreeNodeRenderer.tsx  index.ts  index.tsx  kernelCommunication.tsx  sharedTypes.ts  tenantTab.ts  treeBrowser.tsx  treeQueryManager.ts
src/__tests__/: cdm_tree_browser.spec.ts  tenant_data_browser.spec.ts
src/components/: TreeBrowser.tsx  kernelCommunication.tsx
src/hooks/: useContextMenu.ts  useInfoPanel.ts  useMockNotification.ts  useTreeDimensions.ts
src/providers/: berdlProvider.tsx  cdmProvider.tsx  index.ts
src/utils/: debounce.ts  errorUtil.ts  notebookUtils.ts
style/: base.css
tenant_data_browser/: __init__.py  cdm_methods.py  mock_definitions.py
ui-tests/: package.json
ui-tests/tests/: cdm_tree_browser.spec.ts
